// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreakpointSplitView with hard clipping 1`] = `
Array [
  "volvox_samspec",
]
`;

exports[`BreakpointSplitView with hard clipping 2`] = `
Object {
  "features": Array [
    Array [
      Object {
        "CIGAR": "5S6M",
        "SA": "ref,29,-,6H5M,17,0;",
        "end": 12,
        "name": "r003",
        "start": 8,
        "uniqueId": "123",
      },
      Object {
        "CIGAR": "6H5M",
        "SA": "ref,9,+,5S6M,30,1",
        "end": 32,
        "name": "r003",
        "start": 28,
        "uniqueId": "456",
      },
    ],
  ],
  "type": "Alignments",
}
`;

exports[`BreakpointSplitView with hard clipping 3`] = `
Object {
  "features": Array [
    Array [
      Object {
        "clipPos": undefined,
        "feature": Object {
          "CIGAR": "5S6M",
          "SA": "ref,29,-,6H5M,17,0;",
          "end": 12,
          "name": "r003",
          "start": 8,
          "uniqueId": "123",
        },
        "layout": Array [
          0,
          0,
          100,
          10,
        ],
        "level": 0,
      },
      Object {
        "clipPos": undefined,
        "feature": Object {
          "CIGAR": "6H5M",
          "SA": "ref,9,+,5S6M,30,1",
          "end": 32,
          "name": "r003",
          "start": 28,
          "uniqueId": "456",
        },
        "layout": Array [
          0,
          0,
          100,
          10,
        ],
        "level": 0,
      },
    ],
  ],
  "type": "Alignments",
}
`;

exports[`BreakpointSplitView with soft clipping 1`] = `
Array [
  "pacbio_hg002",
]
`;

exports[`BreakpointSplitView with soft clipping 2`] = `
Object {
  "features": Array [
    Array [
      Object {
        "CIGAR": "919=1I420=1X191=1I1903=1D495=1D92=1X4=1X293=1D707=1X333=1X275=2D223=1D155=1X34=1X204=1X41=1X43=1X572=1X629=1X401=1X3=1X2=3081S",
        "SA": "3,186700631,+,10597S438M1S,60,1;6,56758392,+,7956S2547M6D533S,22,8;",
        "end": 186700648,
        "name": "m64011_181218_235052/85067842/ccs",
        "start": 186692690,
        "uniqueId": "456",
      },
      Object {
        "CIGAR": "10597S11=1X426=1S",
        "SA": "3,186692690,+,7955M4D3081S,60,14;6,56758392,+,7956S2547M6D533S,22,8;",
        "end": 186700648,
        "name": "m64011_181218_235052/85067842/ccs",
        "start": 186692690,
        "uniqueId": "789",
      },
      Object {
        "CIGAR": "7956S4=1D5=1X744=1D63=1X121=1I18=1X99=1X57=1I64=1D8=1X207=1D42=1I103=1X425=1X48=2I107=1I116=1X222=7D75=1D5=533S",
        "SA": "3,186692690,+,7955M4D3081S,60,14;3,186700631,+,10597S438M1S,60,1;",
        "end": 56760944,
        "name": "m64011_181218_235052/85067842/ccs",
        "start": 56758392,
        "uniqueId": "123",
      },
    ],
  ],
  "type": "Alignments",
}
`;

exports[`BreakpointSplitView with soft clipping 3`] = `
Object {
  "features": Array [
    Array [
      Object {
        "clipPos": undefined,
        "feature": Object {
          "CIGAR": "919=1I420=1X191=1I1903=1D495=1D92=1X4=1X293=1D707=1X333=1X275=2D223=1D155=1X34=1X204=1X41=1X43=1X572=1X629=1X401=1X3=1X2=3081S",
          "SA": "3,186700631,+,10597S438M1S,60,1;6,56758392,+,7956S2547M6D533S,22,8;",
          "end": 186700648,
          "name": "m64011_181218_235052/85067842/ccs",
          "start": 186692690,
          "uniqueId": "456",
        },
        "layout": Array [
          0,
          0,
          100,
          10,
        ],
        "level": 0,
      },
      Object {
        "clipPos": undefined,
        "feature": Object {
          "CIGAR": "10597S11=1X426=1S",
          "SA": "3,186692690,+,7955M4D3081S,60,14;6,56758392,+,7956S2547M6D533S,22,8;",
          "end": 186700648,
          "name": "m64011_181218_235052/85067842/ccs",
          "start": 186692690,
          "uniqueId": "789",
        },
        "layout": Array [
          0,
          0,
          100,
          10,
        ],
        "level": 0,
      },
      Object {
        "clipPos": undefined,
        "feature": Object {
          "CIGAR": "7956S4=1D5=1X744=1D63=1X121=1I18=1X99=1X57=1I64=1D8=1X207=1D42=1I103=1X425=1X48=2I107=1I116=1X222=7D75=1D5=533S",
          "SA": "3,186692690,+,7955M4D3081S,60,14;3,186700631,+,10597S438M1S,60,1;",
          "end": 56760944,
          "name": "m64011_181218_235052/85067842/ccs",
          "start": 56758392,
          "uniqueId": "123",
        },
        "layout": Array [
          0,
          0,
          100,
          10,
        ],
        "level": 1,
      },
    ],
  ],
  "type": "Alignments",
}
`;
